# launch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HISTORY.txt  LICENSE  README.md  arithing.h  arithing_impl.cpp  arithing_impl.h  caref.h  caref_impl.cpp  caref_impl.h  chroyes.h  chroyes_impl.cpp  chroyes_impl.h  clap_impl.cpp  clap_impl.h  escseq.h  escseq_impl.cpp  escseq_impl.h  exfmtio.h  exfmtio_impl.cpp  exfmtio_impl.h  fmtio.h  fmtio_concepts.h  fmtio_impl.cpp  fmtio_impl.h  fmtio_nullstream.cpp  fmtio_nullstream.h  goodmath.h  goodmath_arint.cpp  goodmath_arint.h  goodmath_arith.cpp  goodmath_arith.h  goodmath_consts.h  goodmath_impl.cpp  goodmath_impl.h  goodrand.h  goodrand_impl.h  goodstr_impl.cpp  (+14 more)
Documentation/LAUNCH/chroyes/: stopwatch.md  timespan.md
Documentation/LAUNCH/clap/: clap.md
Documentation/LAUNCH/escseq/: escseq.md  escseq_manip.md  escseq_style.md  style_manip.md
Documentation/LAUNCH/fmtio/: fmtin.md  fmtin_line.md  fmtin_single.md  fmtout.md  readable.md
Documentation/LAUNCH/goodmath/: goodmath.md
Documentation/LAUNCH/goodstr/: goodstr.md
include/: arithing.h  arithing_impl.h  arithing_limits.h  chroyes_impl.h  clap.h  escseq_impl.h  exfmtio_impl.h  fmtio_concepts.h  fmtio_impl.h  genev.h  genev_impl.h  goodrand.h  goodrand_concepts.h  goodrand_impl.h  goodstr.h  goodstr_impl.h  hedgehog_concepts.h  hedgehog_impl.h  launch.h  launch_config.h  leisure.h
src/: arithing_impl.cpp  chroyes_impl.cpp  clap_impl.cpp  escseq_impl.cpp  exfmtio_impl.cpp  fmtio_impl.cpp  genev_impl.cpp  goodmath_impl.cpp  goodstr_impl.cpp  hedgehog_impl.cpp
(+18 files in other folders)
